error_msgs/error_ripng.log
vboxuser@ubuntu:~/Downloads/ns-allinone-3.40/ns-3.40$ ./ns3 run scratch/test_3wifi_gemini.cc 
[  0%] Building CXX object scratch/CMakeFiles/scratch_test_3wifi_gemini.dir/test_3wifi_gemini.cc.o
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/scratch/test_3wifi_gemini.cc: In function ‘int main(int, char**)’:
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/scratch/test_3wifi_gemini.cc:283:48: error: ‘virtual void ns3::RipNg::DoInitialize()’ is protected within this context
  283 |     Simulator::Schedule(Seconds(40.0), &RipNg::DoInitialize, &ripNg);
      |                                                ^~~~~~~~~~~~
In file included from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/build/include/ns3/ripng.h:1,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/build/include/ns3/internet-module.h:84,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/scratch/test_3wifi_gemini.cc:5:
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/src/internet/model/ripng.h:286:10: note: declared protected here
  286 |     void DoInitialize() override;
      |          ^~~~~~~~~~~~
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/scratch/test_3wifi_gemini.cc:170:12: warning: unused variable ‘centerOffset’ [-Wunused-variable]
  170 |     double centerOffset = spacing * 0.5;
      |            ^~~~~~~~~~~~
In file included from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/src/core/model/simulator.h:25,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/build/include/ns3/simulator.h:1,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/src/applications/model/application-packet-probe.h:33,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/build/include/ns3/application-packet-probe.h:1,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/build/include/ns3/applications-module.h:12,
                 from /home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/scratch/test_3wifi_gemini.cc:2:
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/src/core/model/make-event.h: In instantiation of ‘void ns3::MakeEvent(MEM, OBJ)::EventMemberImpl0::Notify() [with MEM = void (ns3::RipNg::*)(); OBJ = ns3::RipNgHelper*]’:
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/src/core/model/make-event.h:421:5:   required from ‘ns3::EventImpl* ns3::MakeEvent(MEM, OBJ) [with MEM = void (RipNg::*)(); OBJ = RipNgHelper*]’
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/src/core/model/simulator.h:560:39:   required from ‘static ns3::EventId ns3::Simulator::Schedule(const ns3::Time&, FUNC, Ts&& ...) [with FUNC = void (ns3::RipNg::*)(); typename std::enable_if<(! is_convertible_v<FUNC, ns3::Ptr<ns3::EventImpl> >), int>::type <anonymous> = 0; typename std::enable_if<(! is_function_v<typename std::remove_pointer<_Tp>::type>), int>::type <anonymous> = 0; Ts = {ns3::RipNgHelper*}]’
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/scratch/test_3wifi_gemini.cc:283:24:   required from here
/home/vboxuser/Downloads/ns-allinone-3.40/ns-3.40/src/core/model/make-event.h:416:64: error: pointer to member type ‘void (ns3::RipNg::)()’ incompatible with object type ‘ns3::RipNgHelper’
  416 |          (EventMemberImplObjTraits<OBJ>::GetReference(m_obj).*m_function)();
      |          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~

gmake[3]: *** [scratch/CMakeFiles/scratch_test_3wifi_gemini.dir/build.make:78: scratch/CMakeFiles/scratch_test_3wifi_gemini.dir/test_3wifi_gemini.cc.o] Erro 1
gmake[2]: *** [CMakeFiles/Makefile2:17539: scratch/CMakeFiles/scratch_test_3wifi_gemini.dir/all] Erro 2
gmake[1]: *** [CMakeFiles/Makefile2:17545: scratch/CMakeFiles/scratch_test_3wifi_gemini.dir/rule] Erro 2
gmake: *** [Makefile:5978: scratch_test_3wifi_gemini] Erro 2

